Fix: add gitignore and remove node_modules and db from repo
