# Desktop/itm/api/roadRequests.js
@@ -5,9 +5,20 @@ const router = express.Router();
 
 // GET all
 router.get("/", (req, res) => {
-  db.all("SELECT * FROM road_requests", (err, rows) => {
+  db.all("SELECT * FROM requests", (err, rows) => {
     res.json(rows);
   });
+});
+
+// GET by id
+router.get("/:id", (req, res) => {
+  db.get(
+    "SELECT * FROM requests WHERE id = ?",
+    [req.params.id],
+    (err, row) => {
+      res.json(row);
+    }
+  );
 });
 
 // POST
@@ -15,11 +26,31 @@ router.post("/", (req, res) => {
   const { title, address } = req.body;
 
   db.run(
-    "INSERT INTO road_requests (title, address, status) VALUES (?, ?, 'new')",
+    "INSERT INTO requests (title, address, status) VALUES (?, ?, 'new')",
     [title, address],
     function () {
       res.json({ id: this.lastID });
     }
+  );
+});
+
+// PUT
+router.put("/:id", (req, res) => {
+  const { status } = req.body;
+
+  db.run(
+    "UPDATE requests SET status = ? WHERE id = ?",
+    [status, req.params.id],
+    () => res.json({ updated: true })
+  );
+});
+
+// DELETE
+router.delete("/:id", (req, res) => {
+  db.run(
+    "DELETE FROM requests WHERE id = ?",
+    [req.params.id],
+    () => res.json({ deleted: true })
   );
 });
 
